--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -11,5 +11,5 @@ jobs:
       - name: Bump version and push tag
         uses: laputansoft/github-tag-action@v4.6
         with:
-          github_token: ${{ env.github-token }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           create_annotated_tag: true
