--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -1,15 +1,16 @@
-name: Auto.Tag
-
-on: 
-- push
-
+name: Bump version
+on:
+  push:
+    branches:
+      - master
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@master
+      - uses: actions/checkout@v2
       - name: Bump version and push tag
-        uses: laputansoft/github-tag-action@v4.6
+        id: tag_version
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
           create_annotated_tag: true
+          uses: mathieudutour/github-tag-action@master
+          github_token: ${{ secrets.GITHUB_TOKEN }}
