--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,8 +7,8 @@ name: Package and release
 # other branches or even pullrequests.
 on:
   push:
-    tags:
-      - '*'
+    branches:
+      - master
 
 # a workflow is built up as jobs, and within these jobs are steps
 jobs:
@@ -32,6 +32,12 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0  # gets entire git history, needed for automatic changelogs
+
+      - name: Bump version and push tag
+        with:
+          create_annotated_tag: true
+          uses: mathieudutour/github-tag-action@master
+          github_token: ${{ secrets.GITHUB_TOKEN }}
 
       # once cloned, we just run the GitHub Action for the packager project
       - name: Package and release
