--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,7 +34,7 @@ jobs:
           fetch-depth: 0  # gets entire git history, needed for automatic changelogs
 
       - name: Bump version and push tag
-        uses: mathieudutour/github-tag-action@master
+        uses: mathieudutour/github-tag-action@v6.1
         with:
           create_annotated_tag: true
           github_token: ${{ secrets.GITHUB_TOKEN }}
