--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,6 +34,7 @@ jobs:
           fetch-depth: 0  # gets entire git history, needed for automatic changelogs
 
       - name: Bump version and push tag
+        id: tag_version
         uses: mathieudutour/github-tag-action@v6.1
         with:
           create_annotated_tag: true
