--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,14 +26,15 @@ jobs:
           create_annotated_tag: true
           github_token: ${{ secrets.GITHUB_TOKEN }}
           
-#      - name: Create a GitHub release
-#        uses: ncipollo/release-action@v1
-#        with:
-#          tag: ${{ steps.tag_version.outputs.new_tag }}
-#          name: Release ${{ steps.tag_version.outputs.new_tag }}
-#          body: ${{ steps.tag_version.outputs.changelog }}
+      - name: Create a GitHub release
+        uses: ncipollo/release-action@v1
+        with:
+          tag: ${{ steps.tag_version.outputs.new_tag }}
+          name: Release ${{ steps.tag_version.outputs.new_tag }}
+          body: ${{ steps.tag_version.outputs.changelog }}
 
       - name: Package and release
         uses: BigWigsMods/packager@master
         with:
           args: -n "{package-name}-${{ steps.tag_version.outputs.new_tag }}"
+          github_token: ${{ secrets.GITHUB_TOKEN }}
