--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -17,3 +17,6 @@ jobs:
         with:
           create_annotated_tag: true
           github_token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Create a GitHub release
+        uses: ncipollo/release-action@v1
