--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -15,6 +15,7 @@ jobs:
         id: tag_version
         uses: mathieudutour/github-tag-action@v6.1
         with:
+          release_type: custom
           create_annotated_tag: true
           github_token: ${{ secrets.GITHUB_TOKEN }}
 
