--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -9,6 +9,8 @@ on:
 jobs:
   release:
     runs-on: ubuntu-latest
+    env:
+      GITHUB_OAUTH: ${{ secrets.GITHUB_TOKEN }}
       
     steps:
       - name: Bump version and push tag
@@ -17,3 +19,14 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           create_annotated_tag: true
+
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        
+      - name: Clone project
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      - name: Package and release
+        uses: BigWigsMods/packager@master
