--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -1,5 +1,5 @@
 
-name: Auto tag
+name: Fully-Semi-Automaticated
 
 on:
   push:
@@ -13,6 +13,11 @@ jobs:
       GITHUB_OAUTH: ${{ secrets.GITHUB_TOKEN }}
       
     steps:
+      - name: Clone project
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+          
       - name: Bump version and push tag
         id: tag_version
         uses: mathieudutour/github-tag-action@v6.1
@@ -21,12 +26,9 @@ jobs:
           create_annotated_tag: true
 
       - name: Release
-        uses: softprops/action-gh-release@v1
-        
-      - name: Clone project
-        uses: actions/checkout@v3
+        uses: ncipollo/release-action@v1
         with:
-          fetch-depth: 0
+          tag: ${{ steps.tag_version.outputs.new_tag }}
 
       - name: Package and release
         uses: BigWigsMods/packager@master
