--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -25,6 +25,10 @@ jobs:
         uses: ncipollo/release-action@v1
         with:
           tag: ${{ steps.tag_version.outputs.new_tag }}
+        
+      - name: Sleep
+        run: sleep 1s
+        shell: bash
 
       - name: Clone project
         uses: actions/checkout@v3
