--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -13,6 +13,10 @@ jobs:
       GITHUB_OAUTH: ${{ secrets.GITHUB_TOKEN }}
       
     steps:
+      - name: Clone project
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
     
       - name: Bump version and push tag
         id: tag_version
